<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E01010"
    tools:context=".main.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="102dp"
                android:layout_height="78dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/logo"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="301dp"
                android:layout_height="575dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="#F7FAFA"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">


                <TextView
                    android:id="@+id/tv_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/text_instruction"
                    android:textAlignment="center"
                    android:textColor="#0F0F0F"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:entries="@array/docs_array"
                    android:outlineAmbientShadowColor="#0F0F0F"
                    android:outlineSpotShadowColor="#0F0F0F"
                    android:textAlignment="gravity"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/et_docNro"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/n_de_documento"
                    android:inputType="number"
                    android:textColor="#0C0A0A"
                    android:textColorHint="#0F0F0F"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner"
                    />

                <TextView
                    android:id="@+id/rv_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="52dp"
                    android:text="@string/recordar_n"
                    android:textColor="#0F0F0F"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_docNro" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:enabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/rv_remember"
                    app:layout_constraintTop_toTopOf="@+id/rv_remember"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/bt_ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/ingresar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switch1" />

                <Button
                    android:id="@+id/bt_abrirApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/abrir_app"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bt_ingresar" />

                <ImageView
                    android:id="@+id/cross"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/cross"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/et_docNro"
                    app:layout_constraintEnd_toEndOf="@+id/et_docNro"
                    app:layout_constraintTop_toTopOf="@+id/et_docNro"
                    app:srcCompat="@drawable/cross" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>